// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCard > renders HeroCard with a button 1`] = `
<div
  class="ds:flex ds:flex-col ds:gap-4 ds:rounded-lg ds:p-6 ds:justify-between ds:text-white ds:hyphens-auto"
  style="background-color: rgba(68, 75, 172, 0.95);"
>
  <h2
    class="ds:text-pretty ds:mr-9 ds:text-hero-mobile ds:sm:text-hero"
  >
    Test Title
  </h2>
  <p
    class="ds:text-pretty ds:text-body-lg-mobile ds:sm:text-body-lg"
  >
    Test Content
  </p>
  <div>
    <a
      href="/"
    >
      <span
        class="ds:cursor-pointer ds:inline-flex ds:items-center ds:gap-4 ds:select-none ds:group ds:font-poppins ds:text-button-md ds:px-6 ds:rounded-[30px] ds:pr-4 ds:text-primary-gray ds:bg-white ds:hover:text-accent ds:focus-visible:text-accent ds:active:bg-accent ds:focus-visible:outline-accent ds:focus-visible:outline ds:focus-visible:outline-[3px] ds:focus-visible:outline-offset-[1.5px] ds:active:text-white ds:active:outline-0 ds:mt-4 ds:w-fit ds:group-focus:underline ds:group-focus:text-accent"
      >
        <span
          class="ds:group-hover:underline ds:group-active:no-underline ds:group-focus-visible:no-underline ds:py-4"
        >
          Test Button Label
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </span>
    </a>
  </div>
</div>
`;

exports[`HeroCard > renders HeroCard without a button 1`] = `
<div
  class="ds:flex ds:flex-col ds:gap-4 ds:rounded-lg ds:p-6 ds:justify-between ds:text-white ds:hyphens-auto"
  style="background-color: rgba(68, 75, 172, 0.95);"
>
  <h2
    class="ds:text-pretty ds:mr-9 ds:text-hero-mobile ds:sm:text-hero"
  >
    Test Title
  </h2>
  <p
    class="ds:text-pretty ds:text-body-lg-mobile ds:sm:text-body-lg"
  >
    Test Content
  </p>
</div>
`;
